# rtow

./: .gitignore  benchmark.bat  go.mod
cpp/: CMakeLists.txt  camera.h  color.h  hittable.h  hittable_list.h  image.h  main.cpp  material.h  ray.h  rtweekend.h  sphere.h  spheres_hit.ispc  vec3.h
cpp/enkiTS/: CMakeLists.txt
dx11/: CMakeLists.txt  main.cpp
dx12/: CMakeLists.txt  main.cpp  simple.hlsl
golang/: build.bat  camera.go  hittable.go  hittable_list.go  image.go  main.go  material.go  ray.go  sphere.go  spheres_hit.h  spheres_hit.ispc  vec3.go
odin/: build-timings.bat  build.bat  camera.odin  hittable.odin  hittable_list.odin  image.odin  main.odin  material.odin  ols.json  ray.odin  sphere.odin  vec3.odin
